# django-celery-autoscale

./: LICENSE  README.md  setup.cfg
celery_autoscale/: apps.py  aws.py  constants.py  exceptions.py  models.py  monitor.py  scale.py  tasks.py
